"""ORFS integration — exercises bazel-orfs rules against real ORFS designs."""

module(
    name = "orfs-integration",
    version = "0.0.1",
)

# --- bazel-orfs: RTL-to-GDS flow rules (parent directory) ---

bazel_dep(name = "bazel-orfs")
local_path_override(
    module_name = "bazel-orfs",
    path = "..",
)

bazel_dep(name = "bazel-orfs-verilog")
local_path_override(
    module_name = "bazel-orfs-verilog",
    path = "../verilog",
)

# --- ORFS: OpenROAD flow scripts (fetched at merge-base + patched) ---

bazel_dep(name = "orfs")
git_override(
    module_name = "orfs",
    commit = "d8c6b0cbd54d3a2d6e78671e80b7b479c10af6f6",
    patch_strip = 1,
    patches = [
        "//patches:0002-build-add-exports_files-BUILD.bazel-to-all-src-direc.patch",
        "//patches:0003-docs-update-README-with-config.mk-DSL-and-incrementa.patch",
        "//patches:0004-build-remove-hand-written-design-BUILD-files.patch",
        "//patches:0005-build-fix-config.mk-parser-and-add-missing-BUILD.baz.patch",
        "//patches:0006-build-switch-to-lint-flow-with-local-bazel-orfs-and-.patch",
        "//patches:0007-build-15-18-asap7-designs-pass-lint-flow.patch",
        "//patches:0008-build-all-18-asap7-designs-pass-lint-flow-163-target.patch",
        "//patches:0009-build-add-fakeram-blackbox-stubs-for-swerv_wrapper.patch",
        "//patches:0010-build-sky130hd-4-6-designs-pass-lint-add-chameleon-s.patch",
        "//patches:0011-build-lint-flow-passes-48-51-tests-across-all-6-plat.patch",
        "//patches:0012-build-all-51-tests-pass-across-all-6-platforms.patch",
        "//patches:0013-tools-add-rtlil-stats-command-fix-stage-isolation-an.patch",
        "//patches:0014-build-add-tinyRocket-fakeram-blackbox-and-microwatt-.patch",
        "//patches:0015-refactor-simplify-BUILD-files-exports_files-moved-in.patch",
        "//patches:0016-build-CI-detection-all-platforms-skip-missing-source.patch",
        "//patches:0017-fix-add-mock-cpu-SDC-dependency-on-util.tcl-for-Baze.patch",
        "//patches:0018-build-add-lef-lib-gds-BUILD-files-for-swerv_wrapper-.patch",
        "//patches:0019-build-add-parallel-synthesis-infrastructure-keep-par.patch",
        "//patches:0020-test-force-SYNTH_HIERARCHICAL-1-on-non-trivial-desig.patch",
        "//patches:0021-build-support-SYNTH_BLACKBOXES-after-checkpoint-read.patch",
        "//patches:0022-build-partition-synth-reads-keep-RTLIL-skips-coarse-.patch",
        "//patches:0023-build-split-keep-RTLIL-and-JSON-extraction-into-sepa.patch",
        "//patches:0024-fix-truncate-module-name-in-partition-log-filename-s.patch",
        "//patches:0025-build-add-do-yosys-sdc-copy-target-for-parallel-synt.patch",
        "//patches:0026-docs-add-parallel-synthesis-status-and-next-steps.patch",
        "//patches:0027-fix-remove-non-root-module-overrides-from-MODULE.baz.patch",
        "//patches:0028-fix-override-PDN_TCL-for-riscv32i-mock-sram-to-fix-P.patch",
        "//patches:0029-fix-remove-mock-openroad-bazel_dep-after-inlining.patch",
        "//patches:0030-build-add-flow-designs-BUILD.bazel-for-orfs_designs-.patch",
    ],
    remote = "https://github.com/The-OpenROAD-Project/OpenROAD-flow-scripts.git",
)

bazel_dep(name = "yosys", version = "0.62")
# Make yosys_share publicly visible for the ORFS flow (see bazel-orfs MODULE.bazel).
single_version_override(
    module_name = "yosys",
    patches = ["//patches:yosys-visibility.patch"],
    patch_strip = 1,
)

# --- Mock binaries (from bazel-orfs) ---

bazel_dep(name = "mock-klayout", version = "0.0.1")
local_path_override(
    module_name = "mock-klayout",
    path = "../mock/klayout",
)

# --- OpenROAD built from source ---

bazel_dep(name = "openroad")
git_override(
    module_name = "openroad",
    commit = "576225905dd19b598947af86d108579e4053b86e",
    init_submodules = True,
    patch_strip = 1,
    patches = [
        "//:openroad-visibility.patch",
        "//:openroad-toolchains-llvm-dev-dep.patch",
    ],
    remote = "https://github.com/The-OpenROAD-Project/OpenROAD.git",
)

bazel_dep(name = "qt-bazel")
git_override(
    module_name = "qt-bazel",
    commit = "886104974c2fd72439f2c33b5deebf0fe4649df7",
    remote = "https://github.com/The-OpenROAD-Project/qt_bazel_prebuilts",
)

bazel_dep(name = "glpk", version = "5.0.bcr.4")

bazel_dep(name = "toolchains_llvm", version = "1.5.0")

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
)
llvm.toolchain(
    llvm_version = "20.1.8",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
)

bazel_dep(name = "rules_python", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
use_repo(pip, "orfs-pip")

orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")
orfs.default()
use_repo(orfs, "docker_orfs")
use_repo(orfs, "gnumake")
