"""Bazel rules wrapping SymbiYosys for formal verification."""

module(
    name = "bazel-orfs-sby",
    version = "0.0.1",
)

# --- bazel-orfs and verilog rules ---

bazel_dep(name = "bazel-orfs")
git_override(
    module_name = "bazel-orfs",
    branch = "main",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
)

bazel_dep(name = "bazel-orfs-verilog")
local_path_override(
    module_name = "bazel-orfs-verilog",
    path = "../verilog",
)

bazel_dep(name = "mock-klayout", version = "0.0.1")
local_path_override(
    module_name = "mock-klayout",
    path = "../mock/klayout",
)

# yosys is a transitive dep (via bazel-orfs); override makes yosys_share
# publicly visible so the ORFS flow can reference it across module boundaries.
single_version_override(
    module_name = "yosys",
    patches = ["//patches:yosys-visibility.patch"],
    patch_strip = 1,
)

# --- Source-built tool overrides ---
# git_override is root-only in bzlmod, so each root module must provide it.

bazel_dep(name = "orfs")
git_override(
    module_name = "orfs",
    commit = "f40d2f346e67ffe309a4f49b1897a560cf20c747",
    patch_strip = 1,
    patches = [
        "//patches:0001-build-remove-stale-merge_lib.py-preprocessLib.py-fro.patch",
        "//patches:0002-build-add-all-PDKs-and-export-variables.yaml.patch",
        "//patches:0035-fix-remove-non-root-overrides-from-MODULE.bazel.patch",
    ],
    remote = "https://github.com/The-OpenROAD-Project/OpenROAD-flow-scripts.git",
)

bazel_dep(name = "openroad")
git_override(
    module_name = "openroad",
    commit = "df79404cd806cc435b3c3b53678ebf2441c31313",
    init_submodules = True,
    patch_strip = 1,
    patches = ["//:openroad-visibility.patch"],
    remote = "https://github.com/The-OpenROAD-Project/OpenROAD.git",
)

bazel_dep(name = "qt-bazel")
git_override(
    module_name = "qt-bazel",
    commit = "df022f4ebaa4130713692fffd2f519d49e9d0b97",
    remote = "https://github.com/The-OpenROAD-Project/qt_bazel_prebuilts",
)

bazel_dep(name = "glpk", version = "5.0.bcr.4")

bazel_dep(name = "toolchains_llvm", version = "1.5.0", dev_dependency = True)

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)
llvm.toolchain(
    llvm_version = "20.1.8",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

# --- oss-cad-suite (provides sby, yosys, yosys-abc binaries) ---

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "oss_cad_suite",
    build_file = "@bazel-orfs//:oss_cad_suite.BUILD.bazel",
    strip_prefix = "oss-cad-suite",
    urls = ["https://github.com/YosysHQ/oss-cad-suite-build/releases/download/2026-03-23/oss-cad-suite-linux-x64-20260323.tgz"],
)

# --- Chisel / Scala toolchain ---

bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_scala", version = "7.1.5")
bazel_dep(name = "rules_chisel", version = "0.3.0")

SCALA_VERSION = "2.13.17"

SCALA_VERSION_SHORT = SCALA_VERSION.rpartition(".")[0]

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = SCALA_VERSION)
use_repo(scala_config, "rules_scala_config")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.scala()
scala_deps.scalatest()
use_repo(scala_deps, "rules_scala_toolchains")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.chipsalliance:chisel_%s:7.2.0" % SCALA_VERSION_SHORT,
        "org.chipsalliance:firtool-resolver_%s:2.0.1" % SCALA_VERSION_SHORT,
        "org.chipsalliance:chisel-plugin_%s:7.2.0" % SCALA_VERSION,
        "com.github.scopt:scopt_%s:4.1.0" % SCALA_VERSION_SHORT,
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

chisel = use_extension("@rules_chisel//chisel:extensions.bzl", "chisel")
chisel.toolchain(
    chisel_version = "7.2.0",
    firtool_resolver_version = "2.0.1",
    scala_version = SCALA_VERSION,
)
use_repo(chisel, "chisel_maven")

register_toolchains("@rules_scala_toolchains//...:all")
