load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")

scala_toolchain(
    name = "scala_toolchain_impl",
    dependency_mode = "transitive",
    enable_diagnostics_report = True,
    enable_semanticdb = True,
)

toolchain(
    name = "scala_toolchain",
    toolchain = "scala_toolchain_impl",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    visibility = ["//visibility:public"],
)
