load("@rules_chisel//chisel:defs.bzl", "chisel_library")

# rocket-chip AsyncQueue subset (used by bus and common libraries)
chisel_library(
    name = "asyncqueue_lib",
    srcs = [
        "@diplomacy//:diplomacy/src/diplomacy/nodes/HeterogeneousBag.scala",
        "@rocket_chip//:src/main/scala/util/AsyncQueue.scala",
        "@rocket_chip//:src/main/scala/util/AsyncResetReg.scala",
        "@rocket_chip//:src/main/scala/util/Counters.scala",
        "@rocket_chip//:src/main/scala/util/Crossing.scala",
        "@rocket_chip//:src/main/scala/util/ShiftReg.scala",
        "@rocket_chip//:src/main/scala/util/SynchronizerReg.scala",
        "@rocket_chip//:src/main/scala/util/package.scala",
    ],
    scalacopts = ["-Wconf:cat=deprecation:s"],
    visibility = ["//visibility:public"],
)

# CoralNPU: common + bus + core compiled together (circular deps between packages)
#
# BlackBox resources: Chisel's addResource() looks up files from the classpath.
# RstSync/ClockGate use addResource("Foo.sv") → need files at classpath root.
# SRAM wrappers use addResource("hdl/verilog/Sram_*.v") → need the subdir path.
# We include all with no strip prefix, so SRAM paths work; the chisel7-compat
# patch fixes RstSync/ClockGate to use "hdl/verilog/..." paths too.
chisel_library(
    name = "coralnpu_lib",
    resources = glob(["hdl/verilog/**/*.sv", "hdl/verilog/**/*.svh", "hdl/verilog/**/*.v"]),
    srcs = glob(
        [
            "hdl/chisel/src/common/*.scala",
            "hdl/chisel/src/bus/*.scala",
            "hdl/chisel/src/coralnpu/*.scala",
            "hdl/chisel/src/coralnpu/scalar/*.scala",
            "hdl/chisel/src/coralnpu/float/*.scala",
            "hdl/chisel/src/coralnpu/rvv/*.scala",
        ],
        exclude = [
            "hdl/chisel/src/common/*Test*.scala",
            "hdl/chisel/src/bus/*Test*.scala",
            "hdl/chisel/src/coralnpu/*Test*.scala",
            "hdl/chisel/src/coralnpu/scalar/*Test*.scala",
            "hdl/chisel/src/coralnpu/rvv/*Test*.scala",
            "hdl/chisel/src/coralnpu/float/*Test*.scala",
            "hdl/chisel/src/common/SvGenerationUtils.scala",
            "hdl/chisel/src/common/TestingUtils.scala",
            "hdl/chisel/src/common/FpTestUtils.scala",
        ],
    ),
    scalacopts = ["-Wconf:cat=deprecation:s"],
    deps = [":asyncqueue_lib"],
    visibility = ["//visibility:public"],
)

# BlackBox Verilog implementations (needed alongside generated Chisel Verilog)
filegroup(
    name = "blackbox_sv",
    srcs = [
        "hdl/verilog/ClockGate.sv",
        "hdl/verilog/RstSync.sv",
        "hdl/verilog/Sram_512x128.v",
        "hdl/verilog/Sram_2048x128.v",
        "hdl/verilog/Sram_12ffcp_128x128.v",
    ],
    visibility = ["//visibility:public"],
)
