# CVA6 RTL sources for cv32a60x configuration.
#
# Submodules are fetched as separate http_archive entries:
#   @cvfpu            — FPU (shared with coralnpu)
#   @fpu_div_sqrt_mvp — FPU div/sqrt (shared with coralnpu)
#   @cv_hpdcache      — High-performance data cache
#
# File list from openhwgroup/cva6#3053 (proven for cv32a60x).

filegroup(
    name = "rtl",
    srcs = glob([
        "core/**/*.svh",
        "vendor/**/*.svh",
    ]) + [
        # Packages (order matters for slang)
        "core/include/config_pkg.sv",
        "core/include/cv32a60x_config_pkg.sv",
        "core/include/riscv_pkg.sv",
        "core/include/ariane_pkg.sv",
        "vendor/pulp-platform/axi/src/axi_pkg.sv",
        "core/include/wt_cache_pkg.sv",
        "core/include/std_cache_pkg.sv",
        "core/include/build_config_pkg.sv",
        "core/include/aes_pkg.sv",
        "core/cvxif_example/include/cvxif_instr_pkg.sv",
        "vendor/pulp-platform/common_cells/src/cf_math_pkg.sv",
        # FPGA support
        "vendor/pulp-platform/fpga-support/rtl/SyncDpRam.sv",
        "vendor/pulp-platform/fpga-support/rtl/AsyncDpRam.sv",
        "vendor/pulp-platform/fpga-support/rtl/AsyncThreePortRam.sv",
        "vendor/pulp-platform/fpga-support/rtl/SyncThreePortRam.sv",
        "vendor/pulp-platform/fpga-support/rtl/SyncDpRam_ind_r_w.sv",
        # CVXIF coprocessor
        "core/cvxif_compressed_if_driver.sv",
        "core/cvxif_issue_register_commit_if_driver.sv",
        "core/cvxif_fu.sv",
        "core/cvxif_example/cvxif_example_coprocessor.sv",
        "core/cvxif_example/instr_decoder.sv",
        "core/cvxif_example/compressed_instr_decoder.sv",
        "core/cvxif_example/copro_alu.sv",
        # Vendor: common_cells
        "vendor/pulp-platform/common_cells/src/fifo_v3.sv",
        "vendor/pulp-platform/common_cells/src/lfsr.sv",
        "vendor/pulp-platform/common_cells/src/lfsr_8bit.sv",
        "vendor/pulp-platform/common_cells/src/stream_arbiter.sv",
        "vendor/pulp-platform/common_cells/src/stream_arbiter_flushable.sv",
        "vendor/pulp-platform/common_cells/src/stream_mux.sv",
        "vendor/pulp-platform/common_cells/src/stream_demux.sv",
        "vendor/pulp-platform/common_cells/src/lzc.sv",
        "vendor/pulp-platform/common_cells/src/rr_arb_tree.sv",
        "vendor/pulp-platform/common_cells/src/shift_reg.sv",
        "vendor/pulp-platform/common_cells/src/unread.sv",
        "vendor/pulp-platform/common_cells/src/popcount.sv",
        "vendor/pulp-platform/common_cells/src/exp_backoff.sv",
        "vendor/pulp-platform/common_cells/src/counter.sv",
        "vendor/pulp-platform/common_cells/src/delta_counter.sv",
        # Core
        "core/cva6.sv",
        "core/cva6_rvfi_probes.sv",
        "core/alu.sv",
        "core/alu_wrapper.sv",
        "core/aes.sv",
        "core/fpu_wrap.sv",
        "core/branch_unit.sv",
        "core/compressed_decoder.sv",
        "core/macro_decoder.sv",
        "core/controller.sv",
        "core/zcmt_decoder.sv",
        "core/csr_buffer.sv",
        "core/csr_regfile.sv",
        "core/decoder.sv",
        "core/ex_stage.sv",
        "core/instr_realign.sv",
        "core/id_stage.sv",
        "core/issue_read_operands.sv",
        "core/issue_stage.sv",
        "core/load_unit.sv",
        "core/load_store_unit.sv",
        "core/lsu_bypass.sv",
        "core/mult.sv",
        "core/multiplier.sv",
        "core/serdiv.sv",
        "core/perf_counters.sv",
        "core/ariane_regfile_ff.sv",
        "core/ariane_regfile_fpga.sv",
        "core/scoreboard.sv",
        "core/raw_checker.sv",
        "core/store_buffer.sv",
        "core/amo_buffer.sv",
        "core/store_unit.sv",
        "core/commit_stage.sv",
        "core/axi_shim.sv",
        "core/cva6_accel_first_pass_decoder_stub.sv",
        "core/acc_dispatcher.sv",
        "core/cva6_fifo_v3.sv",
        # Frontend
        "core/frontend/btb.sv",
        "core/frontend/bht.sv",
        "core/frontend/bht2lvl.sv",
        "core/frontend/ras.sv",
        "core/frontend/instr_scan.sv",
        "core/frontend/instr_queue.sv",
        "core/frontend/frontend.sv",
        # Cache subsystem
        "core/cache_subsystem/wt_dcache_ctrl.sv",
        "core/cache_subsystem/wt_dcache_mem.sv",
        "core/cache_subsystem/wt_dcache_missunit.sv",
        "core/cache_subsystem/wt_dcache_wbuffer.sv",
        "core/cache_subsystem/wt_dcache.sv",
        "core/cache_subsystem/cva6_icache.sv",
        "core/cache_subsystem/wt_cache_subsystem.sv",
        "core/cache_subsystem/wt_axi_adapter.sv",
        "core/cache_subsystem/tag_cmp.sv",
        "core/cache_subsystem/axi_adapter.sv",
        "core/cache_subsystem/miss_handler.sv",
        "core/cache_subsystem/cache_ctrl.sv",
        "core/cache_subsystem/cva6_icache_axi_wrapper.sv",
        "core/cache_subsystem/std_cache_subsystem.sv",
        "core/cache_subsystem/std_nbdcache.sv",
        "core/cache_subsystem/cva6_hpdcache_subsystem.sv",
        "core/cache_subsystem/cva6_hpdcache_subsystem_axi_arbiter.sv",
        "core/cache_subsystem/cva6_hpdcache_if_adapter.sv",
        "core/cache_subsystem/cva6_hpdcache_wrapper.sv",
        # PMP
        "core/pmp/src/pmp.sv",
        "core/pmp/src/pmp_entry.sv",
        "core/pmp/src/pmp_data_if.sv",
        # Common utilities
        "common/local/util/tc_sram_wrapper.sv",
        "common/local/util/tc_sram_wrapper_cache_techno.sv",
        "vendor/pulp-platform/tech_cells_generic/src/rtl/tc_sram.sv",
        "common/local/util/sram.sv",
        "common/local/util/sram_cache.sv",
        # MMU
        "core/cva6_mmu/cva6_mmu.sv",
        "core/cva6_mmu/cva6_ptw.sv",
        "core/cva6_mmu/cva6_tlb.sv",
        "core/cva6_mmu/cva6_shared_tlb.sv",
    ],
    visibility = ["//visibility:public"],
)
